Agegados los serializer y las vistas para las apis de ciudades, pueblos y medallas, configuracion en el archivo settings para la ruta Media y la creacion de tokens para los usuarios registrados, modificada la vista para regiones con una ListCreateAPIView.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ apps/pokemon/__pycache__/*
 apps/pokemon/__pycache__/
 .idea/vcs.xml
 .pyc
+Media/
+apps/apis/migrations/__pycache__/
+#apps/pokemon/migrations/0002_remove_town_city.py
+#apps/pokemon/migrations/0003_town_region_town.py
+apps/pokemon/migrations/__pycache__/
