--- a/POKEDX/settings.py.dist
+++ b/POKEDX/settings.py.dist
@@ -40,6 +40,7 @@ INSTALLED_APPS = [
     'apps.apis',
     'apps.pokemon',
     'rest_framework',
+    'rest_framework.authtoken',
 ]
 
 MIDDLEWARE = [
@@ -76,6 +77,16 @@ WSGI_APPLICATION = 'POKEDX.wsgi.application'
 # Database
 # https://docs.djangoproject.com/en/1.10/ref/settings/#databases
 
+# DATABASES = {
+#     'default': {
+#         'ENGINE': 'django.db.backends.postgresql_psycopg2',
+#         'NAME': 'pokedex',
+#         'USER': 'postgres',
+#         'PASSWORD': '',
+#         'HOST': 'db',
+#         'PORT': '5432',
+#     }
+# }
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.postgresql_psycopg2',
@@ -120,8 +131,15 @@ USE_L10N = True
 
 USE_TZ = True
 
-
+MEDIA_URL = '/Media/'
+MEDIA_ROOT = os.path.join(BASE_DIR, "Media")
 # Static files (CSS, JavaScript, Images)
 # https://docs.djangoproject.com/en/1.10/howto/static-files/
 
 STATIC_URL = '/static/'
+
+REST_FRAMEWORK = {
+    'DEFAULT_AUTHENTICATION_CLASSES': (
+        'rest_framework.authentication.TokenAuthentication',
+    )
+}
